--- a/index-2.html
+++ b/index-2.html
@@ -265,7 +265,7 @@
 
                         <!-- Service Video Content Start -->
                         <div class="service-video-content wow fadeInUp" data-wow-delay="0.2s">
-                            <h3>Let's Influence Together Today</h3>
+                            <!-- <h3>Let's Influence Together Today</h3> -->
                             <a href="javascript:void(0);" class="btn-default">Get Free SEO Audit</a>
                         </div>
                         <!-- Service Video Content End -->
