file name renamed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<nav class="navbar navbar-expand-lg">
 				<div class="container-fluid">
 					<!-- Logo Start -->
-					<a class="navbar-brand" href="index-2.html">
+					<a class="navbar-brand" href="index.html">
 						<img src="images/final-logo.png" alt="Logo">
 					</a>
 					<!-- Logo End -->
@@ -50,7 +50,7 @@
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                <li class="nav-item "><a class="nav-link" href="index-2.html">Home</a>
+                                <li class="nav-item "><a class="nav-link" href="index.html">Home</a>
                                 </li>                                
                                 <li class="nav-item"><a class="nav-link" href="javascript:void(0);">About Us</a>
                                 <li class="nav-item"><a class="nav-link" href="javascript:void(0);">Team</a></li>
@@ -64,7 +64,7 @@
                         <!-- Header Btn Start -->
                         <div class="header-btn">
                             <a href="javascript:void(0);" class="btn-default">Get Free Audit</a>
-                            <!-- <li class="nav-item"><a class="btn p-0 " href="./japan/index-2.html">Japan</a></li> -->
+                            <!-- <li class="nav-item"><a class="btn p-0 " href="./japan/index.html">Japan</a></li> -->
                         </div>
 
 
@@ -779,7 +779,7 @@ Be creative and unique</h2>
 						<div class="footer-links">
                             <h3>Useful Links </h3>
                             <ul>
-                                <li><a href="index-2.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="javascript:void(0);">About Us</a></li>
                                 <li><a href="javascript:void(0);">Blog</a></li>
                                 <li><a href="javascript:void(0);">Contact us</a></li>
